--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClinicRealm</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="pages/css/style.css">
 </head>
 <body>
     <header>
@@ -13,8 +13,8 @@
                 <a href="index.html" class="logo">ClinicRealm</a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="structured-ehr-results.html">Structured EHR Results</a></li>
-                    <li><a href="clinical-notes-results.html">Clinical Notes Results</a></li>
+                    <li><a href="pages/structured-ehr-results.html">Structured EHR Results</a></li>
+                    <li><a href="pages/clinical-notes-results.html">Clinical Notes Results</a></li>
                 </ul>
             </div>
         </nav>
@@ -91,7 +91,7 @@ Zhu, Y., Gao, J., Wang, Z., Liao, W., Zheng, X., Liang, L., Wang, Y., Pan, C., H
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name/Institution. All rights reserved.</p>
+            <p>&copy; 2025. All rights reserved.</p>
         </div>
     </footer>
 </body>
