--- a/pages/clinical-notes-results.html
+++ b/pages/clinical-notes-results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClinicRealm</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="pages/css/style.css">
     <style>
         /* Tab styling */
         .tab-container {
@@ -73,8 +73,8 @@
                 <a href="index.html" class="logo">ClinicRealm</a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="structured-ehr-results.html">Structured EHR Results</a></li>
-                    <li><a href="clinical-notes-results.html">Clinical Notes Results</a></li>
+                    <li><a href="pages/structured-ehr-results.html">Structured EHR Results</a></li>
+                    <li><a href="pages/clinical-notes-results.html">Clinical Notes Results</a></li>
                 </ul>
             </div>
         </nav>
@@ -565,7 +565,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name/Institution. All rights reserved.</p>
+            <p>&copy; 2025. All rights reserved.</p>
         </div>
     </footer>
     <script>
